--- a/_navbar.scss
+++ b/_navbar.scss
@@ -56,7 +56,7 @@
 
         li {
             padding: 0 15px;
-            border-right: 1px solid #ddd;
+            border-right: 1px solid #faf7f7;
             // font-family: arial;
         }
     }
@@ -64,7 +64,7 @@
     //Search box
     .search{
         padding: 0 15px;
-        border-right: 1px solid #ddd;
+        border-right: 1px solid #fcfafa;
         width: 25%;
         input{
             border: none;
@@ -80,6 +80,10 @@
         span {
             margin-left: 15px;
             cursor: pointer;
+        }
+        a{
+            text-decoration: none;
+            color: black;
         }
     }
 
