--- a/main.css
+++ b/main.css
@@ -340,38 +340,76 @@
   letter-spacing: 2px;
   color: rgb(8, 8, 8);
 }
-.bestsellers .img-bestsellers {
+.bestsellers .large_img {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
+  height: 380px;
+  width: 100%;
   margin-top: 40px;
-  display: flex;
-  justify-content: space-around;
+  grid-gap: 20px;
 }
-.bestsellers .img-bestsellers .img_a1 {
-  background-image: url(men-s-black-house-of-the-dragon-iconic-graphic-printed-t-shirt.webp);
-  background-size: contain;
-  height: 250px;
-  width: 18%;
-}
-.bestsellers .img-bestsellers .img_a2 {
-  background-image: url(men-beast-within-3-0-oversized-fit-t-shirt-620155-1697028287-1.webp);
-  background-size: auto;
-  height: 250px;
-  width: 18%;
-}
-.bestsellers .img-bestsellers .img_a3 {
-  background-image: url(women-s-black-happier-than-ever-billie-graphic-printed-oversized-t-shirt.webp);
+.bestsellers .large_img .img_a1 {
+  background-image: url(hc1.gif);
   background-size: cover;
-  height: 250px;
-  width: 18%;
 }
-.bestsellers .img-bestsellers .img_a4 {
-  background-image: url(women-s-black-oversized-t-shirt.webp);
+.bestsellers .large_img .img_a2 {
+  background-image: url(hc2.jpg);
   background-size: cover;
-  height: 250px;
-  width: 18%;
 }
-.bestsellers .img-bestsellers .img_a5 {
-  background-image: url(women-s-brown-sugar-spice-everything-nice-graphic-printed-oversized-t-shirt.webp);
+.bestsellers .large_img .img_a3 {
+  background-image: url(hc3.gif);
   background-size: cover;
-  height: 250px;
-  width: 18%;
+}
+
+.bestpick {
+  margin-left: 1.5%;
+}
+.bestpick h2 {
+  margin-top: 60px;
+  text-align: center;
+  font-family: sans-serif;
+  letter-spacing: 2px;
+  color: rgb(8, 8, 8);
+}
+.bestpick .large_img2 {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  grid-template-rows: auto;
+  height: 380px;
+  width: 100%;
+  margin-top: 40px;
+  grid-gap: 20px;
+}
+.bestpick .large_img2 .img_a4 {
+  background-image: url(hc4.jpg);
+  background-size: cover;
+}
+.bestpick .large_img2 .img_a5 {
+  background-image: url(hc5.gif);
+  background-size: cover;
+}
+.bestpick .large_img2 .img_a6 {
+  background-image: url(hc6.jpg);
+  background-size: cover;
+}
+
+.lastBanner {
+  margin-top: 40px;
+  width: 100%;
+  height: 110px;
+}
+.lastBanner .banner {
+  background-image: url(lastBanner.webp);
+  background-size: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  margin-top: 20px;
+  height: 800px;
+  width: 100%;
+  background-color: black;
+  color: aliceblue;
 }/*# sourceMappingURL=main.css.map */
