--- a/_footer.scss
+++ b/_footer.scss
@@ -1,7 +1,103 @@
-.footer{
+.footer {
+    background: #1c1c1c;
+    color: #ffffff;
     margin-top: 20px;
-    height: 800px;
-    width: 100%;
-    background-color: black;
-    color: aliceblue;
+
+    .logo1{
+        color: rgb(255 210 50);
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    #inform-section {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        /* padding-top: 20px; */
+
+    }
+
+    #about-us {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    #about-us div {
+        margin-right: 85px;
+        margin-top: 40px;
+
+    }
+
+    #about-us ul {
+        margin-top: 20px;
+        line-height: 2.3;
+        list-style-type: none;
+
+    }
+
+    #about-us span {
+        color: rgb(255 210 50);
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    #updates>div {
+        margin-top: 40px;
+    }
+
+    #updates span {
+        font-size: 23px;
+    }
+
+    #updates input {
+        width: 260px;
+        height: 38px;
+        font-size: 16px;
+        padding-left: 15px;
+        border-radius: 10px;
+        background-color: rgb(232 232 232);
+
+    }
+
+    #delivery-opt {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+
+    #footer-cloth-opt {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        margin-left: 90px;
+    }
+
+    #footer-cloth-opt div {
+        margin-right: 85px;
+        margin-top: 40px;
+
+    }
+
+    #footer-cloth-opt ul {
+        margin-top: 20px;
+        list-style-type: none;
+
+    }
+
+    #footer-cloth-opt span {
+        font-size: 20px;
+        font-weight: 600;
+    }
+
+    #summary a {
+        text-decoration: none;
+        color: rgb(81, 204, 204);
+    }
+
+    #summary h4,
+    p {
+        margin-top: 25px;
+    }
 }
