--- a/main.css
+++ b/main.css
@@ -407,9 +407,83 @@
 }
 
 .footer {
+  background: #1c1c1c;
+  color: #ffffff;
   margin-top: 20px;
-  height: 800px;
+}
+.footer .logo1 {
+  color: rgb(255, 210, 50);
+  font-size: 20px;
+  font-weight: 600;
+}
+.footer #inform-section {
   width: 100%;
-  background-color: black;
-  color: aliceblue;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  /* padding-top: 20px; */
+}
+.footer #about-us {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.footer #about-us div {
+  margin-right: 85px;
+  margin-top: 40px;
+}
+.footer #about-us ul {
+  margin-top: 20px;
+  line-height: 2.3;
+  list-style-type: none;
+}
+.footer #about-us span {
+  color: rgb(255, 210, 50);
+  font-size: 20px;
+  font-weight: 600;
+}
+.footer #updates > div {
+  margin-top: 40px;
+}
+.footer #updates span {
+  font-size: 23px;
+}
+.footer #updates input {
+  width: 260px;
+  height: 38px;
+  font-size: 16px;
+  padding-left: 15px;
+  border-radius: 10px;
+  background-color: rgb(232, 232, 232);
+}
+.footer #delivery-opt {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.footer #footer-cloth-opt {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  margin-left: 90px;
+}
+.footer #footer-cloth-opt div {
+  margin-right: 85px;
+  margin-top: 40px;
+}
+.footer #footer-cloth-opt ul {
+  margin-top: 20px;
+  list-style-type: none;
+}
+.footer #footer-cloth-opt span {
+  font-size: 20px;
+  font-weight: 600;
+}
+.footer #summary a {
+  text-decoration: none;
+  color: rgb(81, 204, 204);
+}
+.footer #summary h4,
+.footer p {
+  margin-top: 25px;
 }/*# sourceMappingURL=main.css.map */
