--- a/_Login.scss
+++ b/_Login.scss
@@ -57,10 +57,7 @@
         li{
             padding: 0 15px;
             border-right: 1px solid #faf7f7;
-            a{
-                all: unset;
-                cursor: pointer;
-            }
+            // font-family: arial;
         }
         li:hover{
             background-color: #6c4444;
@@ -74,7 +71,7 @@
     .search{
         padding: 0 15px;
         border-right: 1px solid #fcfafa;
-        width: 25%;
+        width: 35%;
         input{
             border: none;
             outline: none;
@@ -89,16 +86,9 @@
         span {
             margin-left: 15px;
             cursor: pointer;
-        }
-        a{
-            text-decoration: none;
-            color: black;
-        }
-        a:hover{
-            background-color: #6c4444;
-            color: #e3e0e0;
-            padding: 10px;
-            border-radius: 20px;
+            i{
+                font-size: 1.5rem;
+            }
         }
     }
 
@@ -113,14 +103,71 @@
     }
 }
 
-// Heading Lines
-.heading{
-    ul{
+.login {
+    display: flex;
+    .imgback {
+        height: 500px;
+        width: 50%;
+        background-color: #f7f7d8;
+        h1{
+            font-size: 3rem;
+            padding-left: 5%;
+            padding-top: 3%;
+        }
+
+        .img {
+            background-image: url(group-19-1617704502.webp);
+            background-size: contain;
+            height: 78%;
+            width: 100%;
+        }
+    }
+    .info{
         display: flex;
+        flex-direction: column;
         justify-content: space-around;
-        font-family: arial;
-        padding: 13px 14px;
-        text-decoration: none;
-        list-style: none;
+        position: relative;
+        left: 5%;
+        h1{
+            font-size: 3rem;
+            a{
+                all: unset;
+                cursor: pointer;
+            }
+        }
+        p{
+            color: #867a7a;
+        }
+        .search2{
+            padding: 0 15px;
+            border-right: 1px solid #fcfafa;
+            width: 100%;
+            height: 40px;
+            input{
+                width: 100%;
+                padding: 10px;
+                color: white;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+        } 
+        .continu{
+            padding: 0 15px;
+            border-right: 1px solid #fcfafa;
+            width: 100%;
+            height: 40px;
+            button {
+                width: 100%;
+                padding: 10px;
+                background-color: #32CD32;
+                color: white;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+            }
+            button:hover {
+                background-color: #2E8B57;
+            }
+        }  
     }
 }
