--- a/_footer.scss
+++ b/_footer.scss
@@ -3,19 +3,12 @@
     color: #ffffff;
     margin-top: 20px;
 
-    .logo1{
-        color: rgb(255 210 50);
-        font-size: 20px;
-        font-weight: 600;
-    }
-
     #inform-section {
         width: 100%;
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         /* padding-top: 20px; */
-
     }
 
     #about-us {
@@ -52,7 +45,7 @@
     }
 
     #updates input {
-        width: 260px;
+        width: 65%;
         height: 38px;
         font-size: 16px;
         padding-left: 15px;
@@ -94,6 +87,12 @@
     #summary a {
         text-decoration: none;
         color: rgb(81, 204, 204);
+    }
+
+    #summary{
+        h4::first-letter{
+            font-size: 3rem;
+        }
     }
 
     #summary h4,
