--- a/PDetail.css
+++ b/PDetail.css
@@ -47,6 +47,15 @@
   font-size: 30px;
   font-weight: bold;
 }
+.navbar .navbar-logo a {
+  all: unset;
+  cursor: pointer;
+}
+.navbar .navbar-logo a:hover {
+  color: #e3e0e0;
+  background-color: rgb(44, 123, 97);
+  border-radius: 5px;
+}
 .navbar .navbar-menu {
   list-style-type: none;
   display: flex;
@@ -84,17 +93,6 @@
 .navbar .icons span i {
   font-size: 1.5rem;
 }
-.navbar .icons a {
-  text-decoration: none;
-  color: black;
-  font-size: large;
-}
-.navbar .icons a:hover {
-  background-color: #6c4444;
-  color: #e3e0e0;
-  padding: 10px;
-  border-radius: 20px;
-}
 @media screen and (max-width: 600px) {
   .navbar .menu {
     display: none;
@@ -104,83 +102,56 @@
   }
 }
 
-.container {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  gap: 20px;
-  padding: 20px;
-  background-color: #e8e8e8;
+.product .head ul {
+  display: flex;
+  margin-top: 5px;
 }
-.container .product {
-  border: 1px solid #ccc;
+.product .head ul li {
   padding: 10px;
-  background-color: #fff;
-}
-.container .product img {
-  width: 100%;
-  height: auto;
-}
-.container .price {
-  color: red;
-  font-weight: bold;
-}
-
-.heading small {
-  margin: 30px;
-}
-.heading small a {
-  all: unset;
-  cursor: pointer;
-}
-.heading h1 {
-  font-size: 3rem;
-  margin: 1rem;
-  text-align: center;
-}
-
-.footer {
-  background: #1c1c1c;
-  color: #ffffff;
-  margin-top: 20px;
-}
-.footer #inform-section {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  /* padding-top: 20px; */
-}
-.footer #about-us {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.footer #about-us div {
-  margin-right: 85px;
-  margin-top: 40px;
-}
-.footer #about-us ul {
-  margin-top: 20px;
-  line-height: 2.3;
   list-style-type: none;
+  color: rgb(106, 128, 128);
 }
-.footer #about-us span {
-  color: rgb(255, 210, 50);
-  font-size: 20px;
-  font-weight: 600;
+.product .detail {
+  display: flex;
 }
-.footer #updates > div {
-  margin-top: 40px;
+.product .detail .dimg {
+  width: 50%;
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-template-rows: repeat(5, auto);
+  height: 800px;
 }
-.footer #updates span {
-  font-size: 23px;
+.product .detail .dimg .imgd1 {
+  grid-row-start: 1;
+  grid-row-end: -6;
+  background-color: #ac2828;
+  height: 100px;
 }
-.footer #updates input {
-  width: 65%;
-  height: 38px;
-  font-size: 16px;
-  padding-left: 15px;
-  border-radius: 10px;
-  background-color: rgb(232, 232, 232);
-}/*# sourceMappingURL=women.css.map */
+.product .detail .dimg .imgd2 {
+  grid-row-start: 1;
+  grid-column-end: 2;
+  background-color: #1d0f85;
+  height: 100px;
+}
+.product .detail .dimg .imgd3 {
+  grid-row-start: 4;
+  grid-column-end: 4;
+  background-color: #cb1fa9;
+  height: 100px;
+}
+.product .detail .dimg .imgd4 {
+  grid-row-start: 2;
+  grid-column-end: 1;
+  background-color: #13c04f;
+  height: 100px;
+}
+.product .detail .dimg .imgd5 {
+  grid-row-start: 2;
+  grid-column-end: 1;
+  background-color: #6c4444;
+  height: 100px;
+}
+.product .detail .det {
+  width: 50%;
+  background-color: #6c4444;
+}/*# sourceMappingURL=PDetail.css.map */
