--- a/_singup.scss
+++ b/_singup.scss
@@ -47,6 +47,16 @@
     .navbar-logo {
         font-size: 30px;
         font-weight: bold;
+        a{
+            all: unset;
+            cursor: pointer;
+        }
+        a:hover{
+            color: #e3e0e0;
+            background-color: rgb(44, 123, 97);
+            border-radius: 50px;
+            padding: 5px;
+        }
     }
 
     // Menu items styling
