--- a/women.css
+++ b/women.css
@@ -47,6 +47,16 @@
   font-size: 30px;
   font-weight: bold;
 }
+.navbar .navbar-logo a {
+  all: unset;
+  cursor: pointer;
+}
+.navbar .navbar-logo a:hover {
+  color: #e3e0e0;
+  background-color: rgb(44, 123, 97);
+  border-radius: 50px;
+  padding: 5px;
+}
 .navbar .navbar-menu {
   list-style-type: none;
   display: flex;
